fix: change chat widget appearance on mobile

--- a/src/components/Chatbot/chatbotStyleOverrides.css
+++ b/src/components/Chatbot/chatbotStyleOverrides.css
@@ -31,3 +31,11 @@
 img.rcw-picker-icon {
     display: none;
 }
+
+/* fix chatbot appearance on mobile */
+@media screen and (max-width: 800px) 
+{
+    .rcw-widget-container {
+        height: 80vh;
+    }
+}
